彻底修复版本问题 - 使用Docker PostgreSQL 17确保版本匹配

--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -14,22 +14,11 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
       
-    - name: Setup PostgreSQL 17 client
+    - name: Setup PostgreSQL 17 client (Docker)
       run: |
-        # 添加 PostgreSQL 官方仓库
-        sudo apt-get update
-        sudo apt-get install -y wget ca-certificates
-        
-        # 添加 PostgreSQL APT 仓库密钥和源
-        wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo apt-key add -
-        echo "deb http://apt.postgresql.org/pub/repos/apt/ $(lsb_release -cs)-pgdg main" | sudo tee /etc/apt/sources.list.d/pgdg.list
-        
-        # 更新包列表并安装 PostgreSQL 17 客户端
-        sudo apt-get update
-        sudo apt-get install -y postgresql-client-17
-        
-        # 验证安装
-        pg_dump --version
+        # 使用 Docker 确保 PostgreSQL 17 版本匹配
+        docker pull postgres:17
+        echo "✅ PostgreSQL 17 Docker 镜像已准备就绪"
         
     - name: Create backup
       env:
@@ -42,13 +31,17 @@ jobs:
         
         echo "🔄 开始备份达芬奇数据库..."
         
-        # 创建备份
-        PGPASSWORD="$SUPABASE_PASSWORD" pg_dump \
+        # 使用 Docker PostgreSQL 17 创建备份
+        docker run --rm \
+          -e PGPASSWORD="$SUPABASE_PASSWORD" \
+          -v $(pwd):/backup \
+          postgres:17 \
+          pg_dump \
           -h "$SUPABASE_HOST" \
           -p 6543 \
           -U "$SUPABASE_USER" \
           -d postgres \
-          -f "$BACKUP_FILE" \
+          -f "/backup/$BACKUP_FILE" \
           --no-sync \
           --verbose
           
